# TheGameEngineDev

./: CMakeLists.txt
src/: main.cpp
src/Character/: Player.cpp  Player.h
src/GameHelper/: GameState.cpp  GameState.h
src/GameHelper/Asset/: Asset.cpp  Asset.h
src/GameHelper/IO/: InputHandlerAsync.cpp  InputHandlerAsync.h
src/GameHelper/Render/: ScreenRenderer.cpp  ScreenRenderer.h
src/GameHelper/Scene/: Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
